[gd_scene load_steps=13 format=2]

[ext_resource path="res://game/player/Player.gd" type="Script" id=1]
[ext_resource path="res://game/player/light.png" type="Texture" id=2]
[ext_resource path="res://game/player/hex1.png" type="Texture" id=3]
[ext_resource path="res://sound/woosh.wav" type="AudioStream" id=4]
[ext_resource path="res://game/player/hex-pieces/hex1-1.png" type="Texture" id=5]
[ext_resource path="res://game/player/hex-pieces/hex1-2.png" type="Texture" id=6]
[ext_resource path="res://game/player/hex-pieces/hex1-3.png" type="Texture" id=7]
[ext_resource path="res://game/player/hex-pieces/hex1-4.png" type="Texture" id=8]
[ext_resource path="res://game/player/hex-pieces/hex1-5.png" type="Texture" id=9]
[ext_resource path="res://game/player/hex-pieces/hex1-6.png" type="Texture" id=10]

[sub_resource type="ShaderMaterial" id=1]


[sub_resource type="Animation" id=2]

resource_name = "explosion"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ExplodingSprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplodingSprites/hex1-1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 30, -50 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExplodingSprites/hex1-2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.7962, -56.2812 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ExplodingSprites/hex1-3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -39.5166, -35.3254 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ExplodingSprites/hex1-4:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -28.1406, 31.733 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ExplodingSprites/hex1-5:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 27.5419, 41.9115 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ExplodingSprites/hex1-6:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 51.4913, -4.78989 ) ]
}

[node name="Player1" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.2
energy = 1.1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="PlayerCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0.168343, -64.3039, 60.2217, -32.2913, 60.1781, 32.6276, 0.0157738, 64.4661, -60.1518, 32.2845, -60.2246, -32.228 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="DashTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DashSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explosion = SubResource( 2 )

[node name="ExplodingSprites" type="Node2D" parent="."]
visible = false
z_index = 10
z_as_relative = false

[node name="hex1-1" type="Sprite" parent="ExplodingSprites"]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="hex1-2" type="Sprite" parent="ExplodingSprites"]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="hex1-3" type="Sprite" parent="ExplodingSprites"]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="hex1-4" type="Sprite" parent="ExplodingSprites"]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="hex1-5" type="Sprite" parent="ExplodingSprites"]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="hex1-6" type="Sprite" parent="ExplodingSprites"]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
